--- a/src/app/weather/weather.component.sass
+++ b/src/app/weather/weather.component.sass
@@ -21,7 +21,63 @@
 
         mat-card-title
             padding: 16px
+            display: flex
+            justify-content: space-around
+            align-items: center
+            margin-bottom: 0
 
         mat-grid-tile
             font-size: 1.5rem
             border: 1px solid rgba(0,0,0,.07)
+
+.grey-cloud
+  height: 50px
+  width: 50px
+  border-radius: 50%
+  background: lightgrey
+  display: inline-block
+  transform: rotate(180deg) translate(-100%)
+  filter: drop-shadow(-12px -3px 4px rgba(0, 0, 0, 0.4))
+  box-shadow: 40px 0px 0px 0px lightgrey, 80px 0px 0px 0px lightgrey, 40px 25px 0px 0px lightgrey
+
+.white-cloud
+  height: 50px
+  width: 50px
+  border-radius: 50%
+  background: white
+  display: inline-block
+  transform: rotate(180deg) translate(-100%)
+  filter: drop-shadow(-12px -3px 4px rgba(0, 0, 0, 0.2))
+  box-shadow: 40px 0px 0px 0px white, 80px 0px 0px 0px white, 40px 25px 0px 0px white
+
+.sun
+  height: 50px
+  width: 50px
+  border-radius: 50%
+  background: #f1c40f
+  box-shadow: 0px 0px 10px 0px rgba(243,156,18 ,1)
+
+.blue-sky
+  background: linear-gradient(#3498db, lightblue)
+
+.sun-cloud
+  &::after
+    content: ' '
+    height: 50px
+    width: 50px
+    border-radius: 50%
+    background: white
+    display: inline-block
+    transform: rotate(180deg) translate(-100%, -0%)
+    filter: drop-shadow(-12px -3px 4px rgba(0, 0, 0, 0.2))
+    box-shadow: 40px 0px 0px 0px white, 80px 0px 0px 0px white, 40px 25px 0px 0px white
+  &::before
+    content: ' '
+    display: block
+    height: 75px
+    width: 75px
+    transform: translate(50%, 50%)
+    border-radius: 50%
+    background: #f1c40f
+    box-shadow: 0px 0px 10px 0px #f39c12
+    z-index: 1px
