--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -8,3 +8,13 @@
     #login-form
         display: flex
         flex-direction: column
+
+        .errors
+            color: red
+
+@media screen and (max-width: 1000px)
+    .login-page
+        mat-card
+            box-sizing: border-box
+            width: 100%
+            height: 100%
